Rsult画面実装済み 後は、ロード画面の大枠を作る

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ sysinfo.txt
 *.apk
 *.unitypackage
 Personal/SA371516/Test_BB_Select/Logs/Packages-Update.log
+Personal/SA371516/Test_Result&Load/Logs/Packages-Update.log
