mp4がコミットできるように修正

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,6 @@ sysinfo.txt
 *.unitypackage
 Personal/SA371516/Test_BB_Select/Logs/Packages-Update.log
 Personal/SA371516/Test_Result&Load/Logs/Packages-Update.log
-*.mp4
 Personal/SA371516/Test_Title/Assets/Unity KD 2019_03_28 16_56_21.mp4.meta
 Personal/SA371516/Test_Title/Assets/Unity KD 2019_03_28 17_00_40.mp4.meta
+Battle Beat - Master/ProjectSettings/ProjectVersion.txt
